rns-lang/tests/snapshots/lexer-directives-space_right_after_dot.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.method
    . whaaat?
.end
----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ tests/testdata/lexer/directives/space_right_after_dot.ja:2:6 ]
   │
 2 │     . whaaat?
   │      ┬  
   │      ╰── Unexpected character ' '
   │ 
   │ Note: Expected one of the directives: .class, .super, .method, .end, .limit, .code
───╯
